--- a/DailyExpenses/app/src/main/AndroidManifest.xml
+++ b/DailyExpenses/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".AddExpenseActivity"></activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="fullSensor"
             android:label="@string/app_name"
+            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
