--- a/FirebaseNofification/app/src/main/AndroidManifest.xml
+++ b/FirebaseNofification/app/src/main/AndroidManifest.xml
@@ -21,6 +21,14 @@
         <activity android:name=".MainActivity">
 
         </activity>
+
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>AndroidManifest.xml
     </application>
 
 </manifest>
